app/assets/scss/components/_day.scss
@use "../theme/layout";
@use "../theme/palette";
@use "../theme/spacing";
@use "../theme/typography";

@use "../patterns";

@use "../tools" as *;

.day {
	margin: spacing.$lg 0;
	// Construct a stacking context
	isolation: isolate;
}

.day__summary {
	@include palette.primary;
	@include typography.heading-base;

	position: sticky;
	top: 0;

	& {
		display: flex;
		gap: spacing.$sm;
		align-items: center;

		@include layout.bp-small {
			flex-wrap: wrap;
		}
	}
}

.day__body {
	display: grid;
	justify-items: start;
	grid-template-columns: minmax(0, 1fr);
	gap: spacing.$md;
	padding-top: spacing.$md;
}

.day__heading {
	@include typography.heading-3;
	@include patterns.disclosure-title;

	& {
		white-space: nowrap;
		font-variant-numeric: tabular-nums;
	}
}

